[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gloo-utils = { version = "0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
bs58 = "0.4.0"
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]